--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 logging.level.root=DEBUG
-spring.security.user.name=user
-spring.security.user.password=password
+server.servlet.context-path=/tree
+
+db.user-username=user
+db.user-password=user
+db.admin-username=admin
+db.admin-password=admin
