--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ db.user-username=user
 db.user-password=user
 db.admin-username=admin
 db.admin-password=admin
+
+application.security.jwt.issuer=hussam
+application.security.jwt.audiance=customer
+application.security.jwt.expirationDays=5
+application.security.jwt.key=secretkey22315ppakksalkksk2022135546888
+application.security.jwt.tokenPrefix=Bearer
