apply cashing to prevent user from multi login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ db.admin-password=admin
 
 application.security.jwt.issuer=hussam
 application.security.jwt.audiance=customer
-application.security.jwt.expirationDays=5
 application.security.jwt.key=secretkey22315ppakksalkksk2022135546888
 application.security.jwt.tokenPrefix=Bearer
+
+spring.cache.redis.time-to-live=5m
+spring.redis.host=localhost
+spring.redis.port=6370
