--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,21 @@
             <artifactId>ucanaccess</artifactId>
             <version>5.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>it.ozimov</groupId>
+            <artifactId>embedded-redis</artifactId>
+            <version>0.7.3</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
